--- a/nginx/conf.d.templates/vaultwarden.conf.template
+++ b/nginx/conf.d.templates/vaultwarden.conf.template
@@ -14,9 +14,7 @@ server {
 
     # redirect server error pages to the static page
     error_page  404              /404.html;
-    location = /404.html {
-        root   /usr/share/nginx/html;
-    }
+    
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
@@ -31,8 +29,8 @@ server {
     access_log  /var/log/nginx/${HOST_VAULT}.443.access.log  main;
     error_log  /var/log/nginx/${HOST_VAULT}.443.error.log  info;
 
-    ssl_certificate /etc/certs/${HOST_VAULT}.${SERVER_NAME}.crt;
-    ssl_certificate_key /etc/certs/${HOST_VAULT}.${SERVER_NAME}.key;
+    ssl_certificate /etc/certs/${SERVER_NAME}.crt;
+    ssl_certificate_key /etc/certs/${SERVER_NAME}.key;
     # ssl_dhparam /usr/shared/letsencrypt/certs/ssl-dhparams.pem;
 
     location / {
