--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-DB_PASSWORD=secretepassword
+JOPLIN_DB_PASSWORD=secretepassword
+SERVER_NAME=tools.localdev
+HOST_TRILIUM=trilium
+HOST_JOPLIN=joplin
+HOST_VAULT=vault
+
 
